entering target before doc publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ script:
   - cargo test -v
   - cargo doc -v
 after_script:
+  - cd target
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
