--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ env:
   global:
     - secure: GLpnEZ9SznbOfQWaV8vdlIadf8t79QpT989BPJiH2tg5ixYoA3n/XTL5fBVkuXenR3n65D1XzvlPItsVaFlbq306ZWIhhRcHwmrSF0ukxmg2D7bp+egkuF2rUtyS5YXJHh5/lwPICN8kKGMXgn4P5fxn8cnNIw6SArbhXLD6Cdo=
 script:
-  - cargo build -v
-  - cargo test -v
-  - cargo doc -v
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc --verbose
 after_script:
   - cd target
-  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+  - (curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh)
