--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ name = "zookeeper"
 version = "0.0.1"
 authors = ["Nandor Kracser <bonifaido@gmail.com>"]
 description = "A minimal ZooKeeper client, work in progress"
+readme = "README.md"
+license = "MIT"
