--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 
 name = "zookeeper"
-version = "0.0.3"
+version = "0.0.4"
 authors = ["Nandor Kracser <bonifaido@gmail.com>"]
 license = "MIT"
-homepage = "https://github.com/rust-lang/time"
+homepage = "https://github.com/bonifaido/rust-zookeeper"
 repository = "https://github.com/bonifaido/rust-zookeeper"
 description = "A minimal ZooKeeper client, work in progress"
 readme = "README.md"
