Faster builds according to Travis CI Blog

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ script:
 after_script:
   - cd target
   - (curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh)
+sudo: false
+# as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
