--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
     - secure: GLpnEZ9SznbOfQWaV8vdlIadf8t79QpT989BPJiH2tg5ixYoA3n/XTL5fBVkuXenR3n65D1XzvlPItsVaFlbq306ZWIhhRcHwmrSF0ukxmg2D7bp+egkuF2rUtyS5YXJHh5/lwPICN8kKGMXgn4P5fxn8cnNIw6SArbhXLD6Cdo=
 script:
   - cargo build --verbose
+  - cd zk-test-cluster && mvn clean package && cd -
   - cargo test --verbose
   - cargo doc --verbose
 after_script:
