--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: rust
+rust: nightly
 env:
   global:
     - secure: GLpnEZ9SznbOfQWaV8vdlIadf8t79QpT989BPJiH2tg5ixYoA3n/XTL5fBVkuXenR3n65D1XzvlPItsVaFlbq306ZWIhhRcHwmrSF0ukxmg2D7bp+egkuF2rUtyS5YXJHh5/lwPICN8kKGMXgn4P5fxn8cnNIw6SArbhXLD6Cdo=
