--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "zookeeper"
-version = "0.0.6"
+version = "0.1.0"
 authors = ["Nandor Kracser <bonifaido@gmail.com>"]
 license = "MIT"
 homepage = "https://github.com/bonifaido/rust-zookeeper"
@@ -10,7 +10,7 @@ description = "A minimal ZooKeeper client, work in progress"
 readme = "README.md"
 
 [dependencies]
-enum_primitive = "*"
+enum_primitive = "0.0.2"
 num = "0.1.24"
-byteorder = "*"
+byteorder = "0.3.9"
 schedule_recv = "0.0.1"
