--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: rust
 rust: nightly
 env:
   global:
-    - secure: GLpnEZ9SznbOfQWaV8vdlIadf8t79QpT989BPJiH2tg5ixYoA3n/XTL5fBVkuXenR3n65D1XzvlPItsVaFlbq306ZWIhhRcHwmrSF0ukxmg2D7bp+egkuF2rUtyS5YXJHh5/lwPICN8kKGMXgn4P5fxn8cnNIw6SArbhXLD6Cdo=
+    - secure: qQK6lhqsdiOzasWVHr1x9FI5n6LD8tUpa+r3z55JAz5Ay6trx6YwZthwzknOMa1XzhC9+XxYJ/mT2I317aIigcCnsIZasfhTwEXT2z+CNAkxwJsXoUSJ2ceVfhpHT2PMziK45afu9YI5+PmjA9mqWj3CftWTYR84zw1nrJtyEAM=
+before_script:
+  - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
 script:
   - cargo build --verbose
   - cd zk-test-cluster && mvn clean package && cd -
   - cargo test --verbose
-  - cargo doc --verbose
+after_success:
+  - travis-cargo --only nightly doc && travis-cargo --only nightly doc-upload
 sudo: false
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
