--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ env:
 before_script:
   - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
 script:
-  - cargo build --verbose
+  - travis-cargo build --verbose
   - cd zk-test-cluster && mvn clean package && cd -
-  - cargo test --verbose
+  - travis-cargo test --verbose
 after_success:
-  - travis-cargo --only nightly -- --features unstable doc && travis-cargo --only nightly doc-upload -- --features unstable
+  - travis-cargo --only nightly doc && travis-cargo --only nightly doc-upload
 sudo: false
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
