--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ enum_primitive = "0.0.2"
 num = "0.1.24"
 byteorder = "0.3.9"
 schedule_recv = "0.0.1"
+time = "0.1.26"
 
 [features]
 unstable = []
