Try if tests work outside of Travis's Docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ script:
   - travis-cargo test
 after_success:
   - travis-cargo --only nightly doc && travis-cargo --only nightly doc-upload
-sudo: false
+# sudo: false
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
