--- a/zk-test-cluster/pom.xml
+++ b/zk-test-cluster/pom.xml
@@ -8,11 +8,15 @@
     <artifactId>zk-test-cluster</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>2.7.0</version>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 
@@ -22,7 +26,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
