--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ authors = ["Nandor Kracser <bonifaido@gmail.com>"]
 license = "MIT"
 homepage = "https://github.com/bonifaido/rust-zookeeper"
 repository = "https://github.com/bonifaido/rust-zookeeper"
+documentation "http://bonifaido.github.io/rust-zookeeper"
 description = "A minimal ZooKeeper client, work in progress"
 readme = "README.md"
+keywords      = ["zookeeper", "distributed", "coordination"]
 
 [dependencies]
 log = "0.3"
