--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Nandor Kracser <bonifaido@gmail.com>"]
 license = "MIT"
 homepage = "https://github.com/bonifaido/rust-zookeeper"
 repository = "https://github.com/bonifaido/rust-zookeeper"
-documentation "http://bonifaido.github.io/rust-zookeeper"
+documentation = "http://bonifaido.github.io/rust-zookeeper"
 description = "A minimal ZooKeeper client, work in progress"
 readme = "README.md"
 keywords      = ["zookeeper", "distributed", "coordination"]
