--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ env:
   global:
     - secure: qQK6lhqsdiOzasWVHr1x9FI5n6LD8tUpa+r3z55JAz5Ay6trx6YwZthwzknOMa1XzhC9+XxYJ/mT2I317aIigcCnsIZasfhTwEXT2z+CNAkxwJsXoUSJ2ceVfhpHT2PMziK45afu9YI5+PmjA9mqWj3CftWTYR84zw1nrJtyEAM=
 before_script:
-  - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
+  - pip install 'travis-cargo<0.2' --user
+  - export PATH=$HOME/.local/bin:$PATH
 script:
   - travis-cargo build
   - cd zk-test-cluster && mvn clean package && cd -
   - travis-cargo test
 after_success:
-  - travis-cargo --only nightly doc && travis-cargo --only nightly doc-upload
-# sudo: false
+  - travis-cargo --only nightly doc
+  - travis-cargo --only nightly doc-upload
+sudo: false
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
