--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ script:
 after_success:
   - travis-cargo --only nightly doc
   - travis-cargo --only nightly doc-upload
-sudo: false
+  - travis-cargo coveralls
+# sudo: false
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
