--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ log = "0.3"
 mio = { git = "https://github.com/carllerche/mio.git" }
 num = "0.1"
 time = "0.1"
+snowflake = "1.0.0"
 
 [dev-dependencies]
 env_logger = "0.3"
