--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,20 +11,21 @@ readme = "README.md"
 keywords = ["zk", "zookeeper", "distributed", "coordination"]
 
 [dependencies]
-byteorder = "0.4"
-bytes = "0.3"
+byteorder = "0.5"
 enum_primitive = "0.1"
-lazy_static = "0.1"
+lazy_static = "0.2"
 log = "0.3"
-mio = "0.5"
+mio = "0.6"
 num = "0.1"
-snowflake = "1.0.0"
+snowflake = "1.2"
+[dependencies.bytes]
+git = "https://github.com/carllerche/bytes"
 
 [dev-dependencies]
 env_logger = "0.3"
 
-[features]
-unstable = []
+# [features]
+# unstable = []
 
 [[test]]
 name = "test"
