Update mio to 0.6
The main differences between mio 0.5 and mio 0.6 is that the Handler
trait goes away, EventLoop goes away, and a new Poll type is introduced
which makes the API similar to epoll. Naturally, this required some API
reorganization. One other side effect of the update is that mio
consumers are now responsible for managing timers and channels
externally.

The event loop in src/watch was replaced with a simple mpsc channel
since there was no hard requirement for mio.

Also added some logging for debugging.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,14 @@ keywords = ["zk", "zookeeper", "distributed", "coordination"]
 byteorder = "1.2"
 bytes = "0.3"
 lazy_static = "0.1"
-log = "0.3"
-mio = "0.5"
+log = "0.4"
+mio = "0.6"
+mio-extras = "2"
 snowflake = "1.0.0"
 zookeeper_derive = { path = "zookeeper-derive", version = "0.3.0" }
 
 [dev-dependencies]
-env_logger = "0.3"
+env_logger = "0.5"
 
 [features]
 unstable = []
