--- a/zookeeper-derive/Cargo.toml
+++ b/zookeeper-derive/Cargo.toml
@@ -9,5 +9,6 @@ description = "Derive implementations used to build the ZooKeeper library"
 proc-macro = true
 
 [dependencies]
-quote = "~0.3.15"
-syn = "~0.11.11"
+quote = "0.6.3"
+syn = "0.14.4"
+#proc-macro2 = { version = "0.4", features = ["nightly"] }
