--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "zookeeper"
-version = "0.5.9"
-authors = ["Nandor Kracser <bonifaido@gmail.com>"]
+name = "zookeeper-async"
+version = "1.0.0"
+authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>", "Nandor Kracser <bonifaido@gmail.com>"]
 license = "MIT"
-homepage = "https://github.com/bonifaido/rust-zookeeper"
-repository = "https://github.com/bonifaido/rust-zookeeper"
-documentation = "http://bonifaido.github.io/rust-zookeeper"
-description = "A minimal ZooKeeper client"
+homepage = "https://github.com/krojew/rust-zookeeper"
+repository = "https://github.com/krojew/rust-zookeeper"
+description = "An async ZooKeeper client"
 readme = "README.md"
-keywords = ["zk", "zookeeper", "distributed", "coordination"]
+keywords = ["zk", "zookeeper", "distributed", "coordination", "async"]
 edition = "2018"
 
 [dependencies]
@@ -20,7 +19,7 @@ lazy_static = "1.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["rt-threaded", "sync", "tcp", "time", "io-util", "macros"] }
 snowflake = "1.0.0"
-zookeeper_derive = { path = "zookeeper-derive", version = "0.4.1" }
+zookeeper_derive = "0.4"
 
 [dev-dependencies]
 env_logger = "0.7"
