--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,13 @@ edition = "2018"
 async-trait = "0.1"
 byteorder = "1.3"
 bytes = "0.5"
+derive_more = "0.99"
 futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
+num_enum = "0.5"
 tokio = { version = "0.2", features = ["rt-threaded", "sync", "tcp", "time", "io-util", "macros"] }
 snowflake = "1.3.0"
-zookeeper_derive = "0.4"
 
 [dev-dependencies]
 env_logger = "0.7"
