--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ zookeeper_derive = { path = "zookeeper-derive", version = "0.4.1" }
 
 [dev-dependencies]
 env_logger = "0.7"
+uuid = { version = "0.8.1", features = ["v4"] }
 
 [features]
 unstable = []
