--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,10 @@ jobs:
           profile: minimal
           toolchain: stable
           components: rustfmt, clippy
+    - uses: actions/setup-java@v2
+      with:
+        distribution: adapt
+        java-version: 8
     - uses: actions-rs/cargo@v1
       with:
         command: test
