--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://github.com/yangsenzk/rust-zookeeper"
 description = "A minimal ZooKeeper client"
 readme = "README.md"
 keywords = ["zk", "zookeeper", "distributed", "coordination"]
+edition = "2021"
 
 [dependencies]
 byteorder = "1.2"
